add viewfx
view without media view. I'll add this tomorow